<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="7">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/monday_short"
                android:layout_alignTop="@+id/modal_checkbox_monday"
                android:layout_alignBottom="@+id/modal_checkbox_monday"
                android:layout_alignStart="@+id/modal_checkbox_monday"
                android:layout_alignEnd="@+id/modal_checkbox_monday"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tuesday_short"
                android:layout_alignTop="@+id/modal_checkbox_tuesday"
                android:layout_alignBottom="@+id/modal_checkbox_tuesday"
                android:layout_alignStart="@+id/modal_checkbox_tuesday"
                android:layout_alignEnd="@+id/modal_checkbox_tuesday" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wednesday_short"
                android:layout_alignTop="@+id/modal_checkbox_wednesday"
                android:layout_alignBottom="@+id/modal_checkbox_wednesday"
                android:layout_alignStart="@+id/modal_checkbox_wednesday"
                android:layout_alignEnd="@+id/modal_checkbox_wednesday" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/thursday_short"
                android:layout_alignTop="@+id/modal_checkbox_thursday"
                android:layout_alignBottom="@+id/modal_checkbox_thursday"
                android:layout_alignStart="@+id/modal_checkbox_thursday"
                android:layout_alignEnd="@+id/modal_checkbox_thursday" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/friday_short"
                android:layout_alignTop="@+id/modal_checkbox_friday"
                android:layout_alignBottom="@+id/modal_checkbox_friday"
                android:layout_alignStart="@+id/modal_checkbox_friday"
                android:layout_alignEnd="@+id/modal_checkbox_friday" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/saturday_short"
                android:layout_alignTop="@+id/modal_checkbox_saturday"
                android:layout_alignBottom="@+id/modal_checkbox_saturday"
                android:layout_alignStart="@+id/modal_checkbox_saturday"
                android:layout_alignEnd="@+id/modal_checkbox_saturday" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <CheckBox
                android:id="@+id/modal_checkbox_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sunday_short"
                android:layout_alignTop="@+id/modal_checkbox_sunday"
                android:layout_alignBottom="@+id/modal_checkbox_sunday"
                android:layout_alignStart="@+id/modal_checkbox_sunday"
                android:layout_alignEnd="@+id/modal_checkbox_sunday" />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/route_time_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New time interval"/>

    <ListView
        android:id="@+id/route_time_interval_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>